--- a/auth-service/package.json
+++ b/auth-service/package.json
@@ -21,6 +21,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/class-transformer": "^0.4.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
@@ -28,6 +29,7 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^9.0.1",
     "@types/jsonwebtoken": "^8.5.9",
+    "class-validator": "^0.14.0",
     "dotenv": "^16.0.3",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.8.0",
