--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,8 @@ services:
       - ./frontend/node_modules:/usr/src/frontend/node_modules
       - ./frontend/.next:/usr/src/frontend/.next
       - ./frontend:/usr/src/frontend
+    networks:
+      - server-net
 
   postgres:
     container_name: user_db
@@ -23,57 +25,67 @@ services:
     restart: always
     volumes:
       - ./volumes/postgres-data:/var/lib/postgresql/data
+    networks:
+      - server-net
 
-  company_bd:
-    container_name: postgresql_db
+  company_db:
+    container_name: company_db
     image: postgres
     restart: always
     ports:
-      - 5432:5432
+      - ${COMPANY_DB_PORT}:5432
     env_file:
       - .env
     environment:
       - POSTGRES_USER=${DB_USER}
       - POSTGRES_PASSWORD=${DB_PASSWORD}
-      - POSTGRES_DB=${DB_NAME}
+      - POSTGRES_DB=${COMPANY_DB_NAME}
+    networks:
+      - server-net
 
   company_service:
-    container_name: app
+    container_name: company-service
     build:
-      context: ./company_service
+      context: ./company-service
       dockerfile: Dockerfile
     command: bash -c "uvicorn main:app --host 0.0.0.0 --port 8000 --reload"
-    volumes:
-      - .:/app
     ports:
       - 5001:8000
     depends_on:
-      - db
+      - company_db
     restart: always
+    networks:
+      - server-net
 
   student_db:
     container_name: student_db
     image: postgres
     restart: always
     ports:
-      - 5432:5432
+      - ${STUDENT_DB_PORT}:5432
     env_file:
       - .env
     environment:
       - POSTGRES_USER=${DB_USER}
       - POSTGRES_PASSWORD=${DB_PASSWORD}
-      - POSTGRES_DB=${DB_NAME}
+      - POSTGRES_DB=${STUDENT_DB_NAME}
+    networks:
+      - server-net
 
   student-service:
-    container_name: app
+    container_name: student-service
     build:
       context: ./student-service
       dockerfile: Dockerfile
     command: bash -c "uvicorn main:app --host 0.0.0.0 --port 8000 --reload"
-    volumes:
-      - .:/app
     ports:
-      - 8000:8000
+      - 5002:8000
     depends_on:
-      - db
+      - student_db
     restart: always
+    networks:
+      - server-net
+
+networks:
+  server-net:
+    driver: bridge
